--- a/style.css
+++ b/style.css
@@ -8,14 +8,18 @@
 main {
     background-color: #f2f2f2;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 form {
     height: 100vh;
     width: 90%;
-    
-    text-align: center;
     padding: 0 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .profile {
@@ -43,12 +47,10 @@ form {
     overflow: hidden;
 }
 .pic img {
-    width: 169px;
-    height: 240px;
+    width: 180px;
+    height: 220px;
 }
-.inputs{
-    padding: 0 16px;
-}
+
 .input_container {
     width: 396px;
     height: 48px;
@@ -78,7 +80,7 @@ span {
 }
 
 input{
-    width: 328px;
+    width: 75vw;
     height: 28px;
     border: none;
     background-color: transparent;
