--- a/style.css
+++ b/style.css
@@ -39,17 +39,15 @@ form {
 .pic {
     width: 169px;
     height: 169px;
-    background-color: rgb(0, 0, 0);
+    background-image: url('src/picture.jpg');
+    background-size: contain;
     border: 4px solid #fff;
     position: absolute;
     border-radius: 100px;
     bottom: -35%;
     overflow: hidden;
 }
-.pic img {
-    width: 180px;
-    height: 220px;
-}
+
 
 .input_container {
     width: 396px;
